<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/seleccione_el_d_a_del_que_se_desea_hacer_la_el_reporte"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_color"
        android:hint="@string/fecha"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24"
        app:startIconTint="#0E185F">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_generar_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/generar">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_cancelar_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancelar">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>