<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_macO_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direcci_n_mac_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_macD_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direcci_n_mac_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_important_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_ipO_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_de_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_important_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_ipD_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_de_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_import_export_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_portOUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto_de_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_import_export_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_portDUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto_de_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_timer_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_hora_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora_del_hecho"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_article_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_observaciones_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/observaciones"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_Modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/modificar">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_Eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/eliminar">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_Salir_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/salir">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </ScrollView>

</LinearLayout>