<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_macO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direcci_n_mac_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_macD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direcci_n_mac_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_important_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_ipO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_de_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_important_devices_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_ipD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_de_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_import_export_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_puertoO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto_de_origen"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_import_export_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_puertoD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto_de_destino"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_timer_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/hora_del_hecho"
                    android:inputType="time"
                    android:longClickable="false"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_article_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/observaciones"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/registrar">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_Salir_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/salir">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </ScrollView>

</LinearLayout>